# depot-commun

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  fly.toml  gen_key.py  manage.py  package.json  pyproject.toml  react-build.sh  requirements.txt  wsgienv.py  xpackage.json
.github/: copilot-instructions.md
buying/: admin.py  billing.py  invoice_pdf.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
buying-frontend/: package-lock.json  package.json
buying-frontend/public/: index.html
buying-frontend/src/: App.tsx  Header.tsx  Home.tsx  Items.tsx  Login.tsx  Menu.tsx  NoLogin.tsx  PrivateRoute.tsx  Purchases.tsx
buying-ionic/: capacitor.config.json  ionic.config.json  package-lock.json  package.json
buying-ionic/src/: App.tsx
buying/migrations/: 0001_initial.py  0002_auto_20201123_1509.py  0002_userprofile_city_userprofile_street_userprofile_zip.py  0003_auto_20201123_1539.py  0004_auto_20201123_1556.py  0005_auto_20201123_1650.py  0006_depot_sign_up_secret.py  0007_auto_20210227_1736.py  0008_auto_20211031_1038.py  0008_auto_20211105_2323.py  (+3 more)
depotcommun/: admin.py  api.py  articles_pdf.py  articles_qr_pdf.py  asgi.py  billing.py  invoice_pdf.py  models.py  settings.py  settings_heroku.py  urls.py  views.py  wsgi.py
frontend-app/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
store/: admin.py  apps.py  articles_pdf.py  billing.py  context_processors.py  email.py  invoice_pdf.py  models.py  serializers.py  services.py  urls.py  urls_frontend.py  views.py  views_frontend.py
(+112 files in other folders)
