[project]
name = "depot-commun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django",
    "django-postgresql",
    "djangorestframework",
    "django-cors-headers",
    "django-solo",
    "django-import-export",
    "django-environ",
    "django-heroku",
    "gunicorn",
    "admin-totals",
    "reportlab",
    "qrbill",
    "svglib"
]

 [dependency-groups]
 dev = [
    "flake8"
 ]
